# RossenheimerMajor

./: CMakeLists.txt  README.md  package.xml
config/: costmap_common_params_burger.yaml
include/Rossenheimer/: Camera.h  Controller.h  Lidar.h  Motor.h  Navigation.h  Navigator.h  Odometer.h  Sensor.h  TurtleBot3.h
include/Rossenheimer/Goal/: Goal.h  GoalBased.h  GoalFire.h  GoalFlood.h
include/Rossenheimer/Sensors/: Lidar.h  Odometer.h  Sensor.h
launch/: exploration.launch  ken_navigation.launch  move_base.launch  turtlebot3_simulation.launch  view_robot.launch
launch/includes/: description.launch.xml
src/: Based.cpp  Camera.cpp  Controller.cpp  Fire.cpp  Flood.cpp  Goal.cpp  Lidar.cpp  Motor.cpp  Navigation.cpp  Navigator.cpp  Odometer.cpp  Sensor.cpp  TurtleBot3.cpp  main.cpp
